--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pizza_cebanc"
+    package="com.hersoft.pizza"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.pizza_cebanc.MainActivity"
+            android:name="com.hersoft.pizza.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,13 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.pizza_cebanc.PizzasActivity"
+            android:name="com.hersoft.pizza.PizzasActivity"
             android:label="@string/title_activity_pizzas" >
         </activity>
-        <activity android:name="com.example.pizza_cebanc.BebidasActivity" >
+        <activity android:name="com.hersoft.pizza.BebidasActivity" >
         </activity>
         <activity
-            android:name="com.example.pizza_cebanc.ResumenActivity"
+            android:name="com.hersoft.pizza.ResumenActivity"
             android:label="@string/title_activity_resumen" >
         </activity>
     </application>
